[tool.poetry]
name = "polaroam"
version = "0.1.0"
description = ""
authors = ["ollin18 <ollin.langle@ciencias.unam.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.3.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
tqdm = "^4.66.4"
scikit-learn = "^1.5.1"
infomap = "^2.8.0"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
